--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hotel-list-page",
+  "name": "hotel-list-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vis.gl/react-google-maps": "^1.4.0",
     "axios": "^1.7.7",
     "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
@@ -19,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "server":"json-server --watch db.json --port 8000",
+    "server": "json-server --watch db.json --port 8000",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
